[package]
name = "music_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minimp3 = { version = "0.4", features = ["async_tokio"] }
serde_json = "1.0.79"
serde = "1.0.136"
tokio = {version = "0.2", features = ["full"] }